add unit test and snapshot test for EquipmentUserList

--- a/Laboratory/Storyboards/Base.lproj/Main.storyboard
+++ b/Laboratory/Storyboards/Base.lproj/Main.storyboard
@@ -291,7 +291,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <items>
-                                <navigationItem title="List of users" id="rFA-a7-p8d">
+                                <navigationItem id="rFA-a7-p8d">
                                     <barButtonItem key="rightBarButtonItem" systemItem="done" id="5JG-90-KHm">
                                         <connections>
                                             <action selector="done:" destination="QXx-5b-iab" id="BcB-zh-AQ9"/>
