--- a/Laboratory/Storyboards/Base.lproj/Main.storyboard
+++ b/Laboratory/Storyboards/Base.lproj/Main.storyboard
@@ -331,6 +331,9 @@
                             <outlet property="delegate" destination="QXx-5b-iab" id="aMQ-2v-Jgb"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="doneButton" destination="5JG-90-KHm" id="kGg-pc-ydw"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v7O-pa-maS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
