--- a/Laboratory/Views/LabEquipmentCell/LabEquipmentTVCell.xib
+++ b/Laboratory/Views/LabEquipmentCell/LabEquipmentTVCell.xib
@@ -33,6 +33,7 @@
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="r8f-vf-1tz" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="S3J-oc-q1t" secondAttribute="trailing" constant="16" id="Elk-za-Xcg"/>
                     <constraint firstItem="S3J-oc-q1t" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="GpF-75-uaA"/>
                     <constraint firstItem="S3J-oc-q1t" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="LGM-NY-LHZ"/>
                     <constraint firstAttribute="trailingMargin" secondItem="r8f-vf-1tz" secondAttribute="trailing" id="Ter-H4-qja"/>
