--- a/Laboratory/Views/EquipmentInfo/EquipmentInfoView.xib
+++ b/Laboratory/Views/EquipmentInfo/EquipmentInfoView.xib
@@ -31,7 +31,7 @@
                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iie-LC-8VS">
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iie-LC-8VS" customClass="MyTextField" customModule="Laboratory" customModuleProvider="target">
                                     <rect key="frame" x="104" y="0.0" width="60" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="60" id="4EF-VH-kbA"/>
@@ -47,7 +47,7 @@
                                 </label>
                             </subviews>
                         </stackView>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="M1V-Fj-6mu">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="M1V-Fj-6mu" customClass="MyTextView" customModule="Laboratory" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="34" width="374" height="128"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -59,7 +59,7 @@
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kRb-gL-WFs">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="kRb-gL-WFs" customClass="MyTextView" customModule="Laboratory" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="187.33333333333334" width="374" height="50"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -71,7 +71,7 @@
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0S7-UN-qNw">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0S7-UN-qNw" customClass="MyTextView" customModule="Laboratory" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="262.66666666666669" width="374" height="50"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -102,7 +102,7 @@
                     </constraints>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sUd-nP-1ia">
-                    <rect key="frame" x="20" y="370" width="374" height="500"/>
+                    <rect key="frame" x="20" y="370" width="374" height="506"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RMK-SQ-knl">
                             <rect key="frame" x="0.0" y="0.0" width="374" height="374"/>
@@ -110,19 +110,22 @@
                                 <constraint firstAttribute="width" secondItem="RMK-SQ-knl" secondAttribute="height" multiplier="1:1" id="qae-6O-ROP"/>
                             </constraints>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nri-LI-CSL">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nri-LI-CSL" customClass="MyButton" customModule="Laboratory" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="382" width="374" height="36"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="36" id="1Wb-EH-hgE"/>
                             </constraints>
                             <state key="normal" title="Edit Image"/>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ark-qD-Fbq">
-                            <rect key="frame" x="0.0" y="426" width="374" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ark-qD-Fbq" customClass="MyButton" customModule="Laboratory" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="426" width="374" height="36"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="36" id="1kx-li-TmS"/>
+                            </constraints>
                             <state key="normal" title="🗑️ Remove Equipment"/>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7LQ-g7-Vuz">
-                            <rect key="frame" x="0.0" y="464" width="374" height="36"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7LQ-g7-Vuz" customClass="MyButton" customModule="Laboratory" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="470" width="374" height="36"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="36" id="f0i-oI-8Zw"/>
                             </constraints>
@@ -144,7 +147,7 @@
             <viewLayoutGuide key="safeArea" id="SxJ-5z-LwO"/>
             <connections>
                 <outlet property="addImageButton" destination="Nri-LI-CSL" id="zPF-DQ-E9L"/>
-                <outlet property="availableTextField" destination="iie-LC-8VS" id="Xe0-Nx-fqZ"/>
+                <outlet property="availableTextField" destination="iie-LC-8VS" id="EcL-Bi-1LQ"/>
                 <outlet property="descriptionTextView" destination="0S7-UN-qNw" id="Dss-rN-tIJ"/>
                 <outlet property="equipmentImageView" destination="RMK-SQ-knl" id="k2R-Hc-fnJ"/>
                 <outlet property="itemsLabel" destination="AGm-To-MNz" id="JAh-1X-3yu"/>
